Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-qute-qute-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-qute-qute-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-11-05 02:18+0000\n"
+"POT-Creation-Date: 2021-11-30 02:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,6 +56,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:19
 #: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:33
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:67
 #, no-wrap
 msgid "list of string"
 msgstr ""
@@ -147,6 +148,24 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:66
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-qute-qute-config_quarkus.qute.escape-content-types]]`link:#quarkus-qute-qute-config_quarkus.qute.escape-content-types[quarkus.qute.escape-content-types]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The list of content types for which the `'`, `\"`, `<`, `>` and `&` characters are escaped if a template variant is set.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:70
+#, no-wrap
+msgid "`text/html,text/xml,application/xml,application/xhtml+xml`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:75
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-qute-qute-config_quarkus.qute.content-types-content-types]]`link:#quarkus-qute-qute-config_quarkus.qute.content-types-content-types[quarkus.qute.content-types]`\n"
 "\n"
 "[.description]\n"
@@ -156,7 +175,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:67
+#: upstream/_generated-config/main/config/quarkus-qute-qute-config.adoc:76
 #, no-wrap
 msgid "`Map<String,String>`"
 msgstr ""
