Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-12-01 02:23+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -55,7 +55,9 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:17
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:26
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:35
-#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:44
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:53
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:62
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:71
 #, no-wrap
 msgid "string"
 msgstr "string"
@@ -76,6 +78,44 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:34
 #, no-wrap
 msgid ""
+"[[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.post-logout-uri-param]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.post-logout-uri-param[quarkus.oidc.logout.post-logout-uri-param]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Name of the post logout URI parameter which will be added as a query parameter to the logout redirect URI.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:38
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:74
+#, no-wrap
+msgid "`post_logout_redirect_uri`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:43
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.extra-params-extra-params]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.logout.extra-params-extra-params[quarkus.oidc.logout.extra-params]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Additional properties which will be added as the query parameters to the logout redirect URI.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:44
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:80
+#, no-wrap
+msgid "`Map<String,String>`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:52
+#, no-wrap
+msgid ""
 "[[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.path[quarkus.oidc.\"tenant\".logout.path]`\n"
 "\n"
 "[.description]\n"
@@ -85,7 +125,7 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:43
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:61
 #, no-wrap
 msgid ""
 "[[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-path]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-path[quarkus.oidc.\"tenant\".logout.post-logout-path]`\n"
@@ -93,5 +133,29 @@ msgid ""
 "[.description]\n"
 "--\n"
 "Relative path of the application endpoint where the user should be redirected to after logging out from the OpenID Connect Provider. This endpoint URI must be properly registered at the OpenID Connect Provider as a valid redirect URI.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:70
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-uri-param]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.post-logout-uri-param[quarkus.oidc.\"tenant\".logout.post-logout-uri-param]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Name of the post logout URI parameter which will be added as a query parameter to the logout redirect URI.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-oidc-oidc-tenant-config-logout.adoc:79
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.extra-params-extra-params]]`link:#quarkus-oidc-oidc-tenant-config-logout_quarkus.oidc.-tenant-.logout.extra-params-extra-params[quarkus.oidc.\"tenant\".logout.extra-params]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Additional properties which will be added as the query parameters to the logout redirect URI.\n"
 "--"
 msgstr ""
