Translate kubernetes-config.adoc.po

--- a/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/kubernetes-client.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-11-24 10:04+0000\n"
-"PO-Revision-Date: 2021-04-11 18:47+0900\n"
+"PO-Revision-Date: 2021-12-01 11:53+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja_JP\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -262,7 +262,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:143
-#, fuzzy
 msgid "By default, the mock server will be in CRUD mode, so you have to use the client to build your state before your application can retrieve it, but you can also set it up in non-CRUD mode and mock all HTTP requests made to Kubernetes:"
 msgstr "デフォルトでは、モックサーバはCRUDモードになっているので、アプリケーションがステートを取得する前に、クライアントを使ってステートを構築する必要がありますが、非CRUDモードに設定して、KubernetesへのすべてのHTTPリクエストをモックすることもできます。"
 
@@ -291,9 +290,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:177
-#, fuzzy
 msgid "You can also use the `setup` attribute on the `@WithKubernetesTestServer` annotation to provide a class that will configure the `KubernetesServer` instance:"
-msgstr "また、 `@WithKubernetesTestServer` アノテーションの `setup` 属性を使用して、 `KubernetesServer` インスタンスを構成するクラスを提供することもできます。"
+msgstr "また、 `@WithKubernetesTestServer` アノテーションの `setup` 属性を使用して、 `KubernetesServer` インスタンスを設定するクラスを提供することもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:183
@@ -332,10 +330,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:198
-#, fuzzy
-#| msgid "Alternately, you can create a `CustomKubernetesMockServerTestResource.java` to ensure all your `@QuarkusTest` enabled test classes share the same mock server setup:"
 msgid "Alternately, you can create an extension of the `KubernetesServerTestResource` class to ensure all your `@QuarkusTest` enabled test classes share the same mock server setup via the `QuarkusTestResource` annotation:"
-msgstr "`CustomKubernetesMockServerTestResource.java` を作成して、 `@QuarkusTest` を有効にしたすべてのテストクラスが同じモックサーバー設定を共有できるようにすることができます。"
+msgstr "または、 `KubernetesServerTestResource`クラスの拡張を作成して、` @ QuarkusTest`が有効なすべてのテストクラスが `QuarkusTestResource`アノテーションを介して同じモックサーバーセットアップを共有するようにすることもできます。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:202
@@ -380,17 +376,14 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kubernetes-client.adoc:224
-#, fuzzy, no-wrap
-#| msgid "Note on implementing the Watcher interface"
+#, no-wrap
 msgid "Note on implementing or extending generic types"
-msgstr "Watcher インターフェイスの実装についての注意点"
+msgstr "ジェネリック型の実装または拡張に関する注意"
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:230
-#, fuzzy
-#| msgid "Due to the restrictions imposed by GraalVM, extra care needs to be taken when implementing an `io.fabric8.kubernetes.client.Watcher` if the application is intended to work in native mode.  Essentially every `Watcher` implementation needs to specify the Kubernetes model class that it handles via the ``Watcher``'s generic type at class definition time.  To better understand this, suppose we want to watch for changes to Kubernetes `Pod` resources. There are a couple ways to write such a `Watcher` that are guaranteed to work in native:"
 msgid "Due to the restrictions imposed by GraalVM, extra care needs to be taken when implementing or extending generic types provided by the client if the application is intended to work in native mode.  Essentially every implementation or extension of generic classes such as `Watcher`, `ResourceHandler` or `CustomResource` needs to specify their associated Kubernetes model class (or, in the case of `CustomResource`, regular Java types) at class definition time.  To better understand this, suppose we want to watch for changes to Kubernetes `Pod` resources.  There are a couple ways to write such a `Watcher` that are guaranteed to work in native:"
-msgstr "GraalVMによって課せられた制限のため、アプリケーションがネイティブモードで動作することを意図している場合、 `io.fabric8.kubernetes.client.Watcher` を実装する際には特に注意が必要です。基本的にすべての `Watcher` の実装は、クラス定義時に `Watcher` のジェネリック型を介して扱う Kubernetes モデルクラスを指定する必要があります。これをよりよく理解するために、例えばKubernetes `Pod` リソースの変更を監視したいとします。このような `Watcher` を書くには、ネイティブでの動作が保証されている方法がいくつかあります。"
+msgstr "GraalVMによって課せられた制限のため、アプリケーションがネイティブモードで動作することを意図している場合、 クライアントによって提供されるジェネリック型を実装または拡張する際には特別な注意が必要です。基本的に、 `Watcher`、` ResourceHandler`、 `CustomResource`などのジェネリッククラスのすべての実装または拡張は、クラス定義時に関連するKubernetesモデルクラス（または、` CustomResource`の場合は通常のJavaタイプ）を指定する必要があります。 よく理解するために、例えばKubernetesの `Pod`リソースへの変更を監視するとします。 ネイティブでの動作が保証されているこのような `Watcher` を作成するには、いくつかの方法があります。"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:238
@@ -666,9 +659,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/kubernetes-client.adoc:405
-#, fuzzy
 msgid "Or by using the `@WithOpenShiftTestServer` similar to the `@WithKubernetesTestServer` explained in the previous section:"
-msgstr "または、前のセクションで説明した `@WithKubernetesTestServer` と同様の `@WithOpenShiftTestServer` を使用することによって。"
+msgstr "または、前のセクションで説明した `@WithKubernetesTestServer` と同様の `@WithOpenShiftTestServer` を使用することによって:"
 
 #. type: delimited block -
 #: upstream/_guides/kubernetes-client.adoc:411
