--- a/l10n/po/ja_JP/_guides/lifecycle.adoc.po
+++ b/l10n/po/ja_JP/_guides/lifecycle.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-08-31 13:16+0000\n"
-"PO-Revision-Date: 2021-11-17 11:23+0900\n"
+"PO-Revision-Date: 2021-12-01 13:57+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -301,27 +301,23 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:137
-#, fuzzy
 msgid "Command line arguments can be passed to the application through the `-D` flag with the property `quarkus.args`:"
 msgstr "コマンドライン引数は、プロパティ `quarkus.args` で `-D` フラグを介してアプリケーションに渡すことができます。"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:139
-#, fuzzy
 msgid "For Quarkus dev mode: `./mvnw quarkus:dev -Dquarkus.args=<cmd-args>`"
-msgstr "Quarkus開発モードの場合。 `./mvnw quarkus:dev -Dquarkus.args=&amp;lt;cmd-args&amp;gt;`"
+msgstr "Quarkus開発モードの場合: `./mvnw quarkus:dev -Dquarkus.args=<cmd-args>`"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:140
-#, fuzzy
 msgid "For a runner jar: `java -Dquarkus.args=<cmd-args> -jar target/quarkus-app/quarkus-run.jar`"
-msgstr "ランナー・ジャーの場合 `java -Dquarkus.args=&amp;lt;cmd-args&amp;gt; -jar target/quarkus-app/quarkus-run.jar`"
+msgstr "runner jarの場合: `java -Dquarkus.args=<cmd-args> -jar target/quarkus-app/quarkus-run.jar`"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:141
-#, fuzzy
 msgid "For a native executable: `./target/lifecycle-quickstart-1.0-SNAPSHOT-runner -Dquarkus.args=<cmd-args>`"
-msgstr "ネイティブの実行ファイルの場合 `./target/lifecycle-quickstart-1.0-SNAPSHOT-runner -Dquarkus.args=&amp;lt;cmd-args&amp;gt;`"
+msgstr "ネイティブ実行可能ファイルの場合: `./target/lifecycle-quickstart-1.0-SNAPSHOT-runner -Dquarkus.args=<cmd-args>`"
 
 #. type: Title ==
 #: upstream/_guides/lifecycle.adoc:142
