Add some translations

--- a/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-11-24 10:04+0000\n"
-"PO-Revision-Date: 2021-04-25 23:27+0900\n"
+"PO-Revision-Date: 2021-12-01 14:14+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -55,7 +55,7 @@ msgstr "マルチテナントへの対応方法については、 link:security-
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect.adoc:21
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quickstart"
 msgstr "クイックスタート"
 
@@ -82,10 +82,8 @@ msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:30
-#, fuzzy
-#| msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:31
@@ -110,10 +108,8 @@ msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:37
-#, fuzzy
-#| msgid "In this example, we build a very simple microservice which offers three endpoints:"
 msgid "In this example, we build a very simple microservice which offers two endpoints:"
-msgstr "この例では、3つのエンドポイントを提供する非常にシンプルなマイクロサービスを構築します:"
+msgstr "この例では、2つのエンドポイントを提供する非常にシンプルなマイクロサービスを構築します:"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:39
@@ -2102,21 +2098,18 @@ msgstr "マルチテナントへの対応方法については、 link:security-
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:1120
-#, fuzzy
 msgid "link:security-openid-connect-dev-services[Dev Services for Keycloak]"
-msgstr "link:security-openid-connect-dev-services[OpenId Connectの開発サービス]"
+msgstr "link:security-openid-connect-dev-services[Dev Services for Keycloak]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:1121
-#, fuzzy
 msgid "link:security-jwt-build[Sign and encrypt JWT tokens with SmallRye JWT Build]"
 msgstr "link:security-jwt-build[SmallRye JWT BuildによるJWTトークンの署名と暗号化]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:1122
-#, fuzzy
 msgid "link:security#oidc-jwt-oauth2-comparison[Summary of Quarkus OIDC, JWT and OAuth2 features]"
-msgstr "link:security#oidc-jwt-oauth2-comparison[QuarkusのOIDC、JWT、OAuth2機能の概要]"
+msgstr "link:security#oidc-jwt-oauth2-comparison[Quarkus OIDC、JWT、OAuth2機能の概要]"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:1122
