--- a/l10n/po/ja_JP/_guides/vault.adoc.po
+++ b/l10n/po/ja_JP/_guides/vault.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2021-11-24 10:04+0000\n"
-"PO-Revision-Date: 2021-04-04 21:04+0900\n"
+"PO-Revision-Date: 2021-12-01 14:10+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 #. This guide is maintained in the main Quarkus repository
@@ -22,8 +22,7 @@ msgstr ""
 #. https://github.com/quarkusio/quarkus/tree/main/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/vault.adoc:6
-#, fuzzy, no-wrap
-#| msgid "Quarkus - Using HashiCorp Vault"
+#, no-wrap
 msgid "Using HashiCorp Vault"
 msgstr "HashiCorp Vaultの使用"
 
@@ -59,10 +58,9 @@ msgstr "link:https://www.vaultproject.io/docs/secrets/transit[トランジット
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:32
-#, fuzzy
 #| msgid "support for the https://www.vaultproject.io/docs/secrets/transit[Transit Secret Engine] as documented in the {vault-transit-guide}"
 msgid "support for the https://www.vaultproject.io/docs/secrets/pki[PKI Secret Engine] as documented in the {vault-pki-guide}"
-msgstr "link:https://www.vaultproject.io/docs/secrets/transit[トランジットシークレットエンジン] のサポートは {vault-transit-guide} で文書化されています。"
+msgstr "https://www.vaultproject.io/docs/secrets/pki[PKI Secret Engine] のサポートは {vault-pki-guide} で文書化されています。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:33
@@ -97,10 +95,8 @@ msgstr "IDE"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:46
-#, fuzzy
-#| msgid "JDK 1.8+ installed with `JAVA_HOME` configured appropriately"
 msgid "JDK 11+ installed with `JAVA_HOME` configured appropriately"
-msgstr "JDK 1.8+ がインストールされ、 `JAVA_HOME`  が適切に設定されていること"
+msgstr "JDK 11+ がインストールされ、 `JAVA_HOME` が適切に設定されていること"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:47
@@ -120,9 +116,8 @@ msgstr "Vaultの起動"
 
 #. type: delimited block =
 #: upstream/_guides/vault.adoc:54
-#, fuzzy
 msgid "Using <<dev-services,Dev Services>>, Quarkus will take care of starting Vault in dev and test mode."
-msgstr "link:#dev-services[DevServices]を使用することで、QuarkusはdevおよびtestモードでのVaultの起動を担当します。"
+msgstr "<<dev-services,Dev Services>> を使用することで、QuarkusはdevおよびtestモードでのVaultの起動の面倒を見ます。"
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:57
@@ -762,7 +757,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/vault.adoc:422
-#, fuzzy
 msgid "Create a key to generate codes."
 msgstr "コードを生成するキーを作成します。"
 
