Update .po files

--- a/l10n/po/ja_JP/_guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute-reference.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-11-24 10:04+0000\n"
+"POT-Creation-Date: 2021-12-01 16:05+0000\n"
 "PO-Revision-Date: 2021-04-30 11:49+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -3133,7 +3133,7 @@ msgstr "名前空間拡張メソッド例"
 #, no-wrap
 msgid ""
 "@TemplateExtension(namespace = \"str\")\n"
-"public static class StringExtensions {\n"
+"public class StringExtensions {\n"
 msgstr ""
 
 #. type: delimited block -
