--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-11-24 10:04+0000\n"
+"POT-Creation-Date: 2021-12-01 16:05+0000\n"
 "PO-Revision-Date: 2021-04-25 23:37+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -23,7 +23,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:6
 #, fuzzy, no-wrap
 #| msgid "Quarkus - Using OpenID Connect to Protect Web Applications using Authorization Code Flow."
-msgid "Using OpenID Connect (OIDC) to Protect Web Applications using Authorization Code Flow."
+msgid "Using OpenID Connect (OIDC) to Protect Web Applications using Authorization Code Flow"
 msgstr "認可コードフローのOpenID Connectを使用してWebアプリケーションを保護"
 
 #. type: Plain text
