--- a/l10n/po/ja_JP/_guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_guides/datasource.adoc.po
@@ -1385,14 +1385,15 @@ msgstr "この機能は、link:https://dev.mysql.com/doc/connector-j/8.0/en/conn
 
 #. type: Title ====
 #: upstream/_guides/datasource.adoc:628
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "MySQL Limitations"
-msgstr ""
+msgstr "MySQLの制限事項"
 
 #. type: Plain text
 #: upstream/_guides/datasource.adoc:634
+#, fuzzy
 msgid "When compiling a Quarkus application to native-image, the MySQL support for JMX and Oracle Cloud Infrastructure (OCI) integrations are disabled as they are not compatible with GraalVM native-images.  The lack of JMX support is a natural consequence of running in native and is unlikely to be resolved.  The integration with OCI could be resolved, if you need it we suggest opening a support request with the MySQL Connector/J maintainers."
-msgstr ""
+msgstr "Quarkusアプリケーションをネイティブイメージにコンパイルする際、MySQLによるJMXのサポートとOracle Cloud Infrastructure（OCI）の統合は、GraalVMのネイティブイメージと互換性がないため無効になります。JMXがサポートされないのは、ネイティブで動作することによる自然な結果であり、解決する見込みはありません。OCIとの統合は解決される可能性がありますが、もし必要であれば、MySQL Connector/Jのメンテナにサポートリクエストを出すことをお勧めします。"
 
 #. type: Title ===
 #: upstream/_guides/datasource.adoc:635
