Update .po files

--- a/l10n/po/ja_JP/container-first.md.po
+++ b/l10n/po/ja_JP/container-first.md.po
@@ -17,25 +17,25 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 #. type: YAML Front Matter: layout
-#: upstream/awards.md:1
+#: upstream/container-first.md:1
 #, no-wrap
-msgid "awards"
+msgid "container-first"
 msgstr ""
 
 #. type: YAML Front Matter: permalink
-#: upstream/awards.md:1
+#: upstream/container-first.md:1
 #, no-wrap
-msgid "/awards/"
+msgid "/container-first/"
 msgstr ""
 
 #. type: YAML Front Matter: subtitle
-#: upstream/awards.md:1
+#: upstream/container-first.md:1
 #, no-wrap
-msgid "Quarkus has been honored to receive multiple awards and recognition. We feel these are an affirmation of the great work being done by our dedicated community. We’ve started a trophy case to share the kudos with everyone."
+msgid "Quarkus applications are optimised for low memory usage and fast startup times."
 msgstr ""
 
 #. type: YAML Front Matter: title
-#: upstream/awards.md:1
+#: upstream/container-first.md:1
 #, no-wrap
-msgid "Awards and Recognition"
+msgid "Container First"
 msgstr ""
