--- a/l10n/po/ja_JP/worldtour_abstracts.md.po
+++ b/l10n/po/ja_JP/worldtour_abstracts.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-05 16:15+0000\n"
+"POT-Creation-Date: 2021-12-01 21:12+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -31,5 +31,5 @@ msgstr ""
 #. type: YAML Front Matter: title
 #: upstream/worldtour_abstracts.md:1
 #, no-wrap
-msgid "World Tour - Abstracts and Support materials"
+msgid "World Tour - Abstracts and Support materials."
 msgstr ""
