--- a/l10n/po/ja_JP/_posts/2021-12-02-website-and-discussions.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-02-website-and-discussions.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Website refresh and GitHub Discussions'\n"
@@ -34,59 +34,73 @@ msgid ""
 "author: maxandersen\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: ウェブサイトのリニューアルとGitHubのディスカッション」について\n"
+"date: 2021-12-02\n"
+"tags: announcement\n"
+"synopsis: ウェブサイトのナビゲーションが刷新され、コミュニティの会話のためにGitHubのディスカッションを可能にしている」。\n"
+"author: maxandersen\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:13
+#, fuzzy
 msgid "Quarkus website got a refresh and we enabled GitHub discussions for community conversations."
-msgstr ""
+msgstr "Quarkusのウェブサイトがリニューアルされ、コミュニティでの会話のためにGitHubでのディスカッションが可能になりました。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:14
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Website refresh"
-msgstr ""
+msgstr "ウェブサイトのリニューアル"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:17
+#, fuzzy
 msgid "We've refreshed the look'n'feel with more contrast on pages for better readability."
-msgstr ""
+msgstr "見た目を一新し、ページのコントラストを高めて読みやすさを向上させました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:19
+#, fuzzy
 msgid "Cleaned up navigation menu and made a no fuzz link:/get-started/[\"Getting Started\"] section to show the absolute simplest set of steps to get started with Quarkus."
-msgstr ""
+msgstr "ナビゲーションメニューを整理し、Quarkusを使い始めるための絶対的にシンプルな手順を示した link:/get-started/[「はじめに」]セクションを作りました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:21
+#, fuzzy
 msgid "And finally we now have enabled for anyone with a GitHub account to comment on the blog."
-msgstr ""
+msgstr "そして最後に、GitHubのアカウントを持っている人なら誰でもブログにコメントできるようになりました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:23
+#, fuzzy
 msgid "To comment scroll to the bottom of any blog entry, click \"Login with GitHub\" and follow the instructions and you can now post a comment.  This feature is implemented using GitHub Discussions so you will see them show up in https://github.com/quarkusio/quarkus/discussions[GitHub Discussion] category named https://github.com/quarkusio/quarkus/discussions/categories/quarkus-blog-website[Quarkus Blog/Website]"
-msgstr ""
+msgstr "コメントをするには、ブログエントリーの一番下までスクロールし、「Login with GitHub」をクリックして指示に従うと、コメントを投稿することができます。この機能はGitHub Discussionsを使用して実装されているため、 link:https://github.com/quarkusio/quarkus/discussions/categories/quarkus-blog-website[Quarkus Blog/Website]という link:https://github.com/quarkusio/quarkus/discussions[GitHub Discussion]カテゴリに表示されます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:24
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "GitHub Discussions"
-msgstr ""
+msgstr "GitHubでのディスカッション"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:27
+#, fuzzy
 msgid "Back in August we started looking into enabling GitHub discussions for community conversations. Main drivers were that we felt the community were missing a place to post about all things Quarkus - not everything is a user question or a development idea for Quarkus. In additonal all the conversations in Zulip #user chat kept growing every day but every question answered are not discoverable by search engines. Yes, StackOverflow exist, but it has issues too - thus we needed something better. Enter GitHub Discussions."
-msgstr ""
+msgstr "8月に、コミュニティの会話のためにGitHubでのディスカッションを可能にすることを検討し始めました。その主な理由は、コミュニティにはQuarkusに関するあらゆることを投稿する場所がないと感じたからです。すべてがユーザーの質問やQuarkusの開発アイデアではありません。さらに、Zulip #ユーザーチャットでの会話は毎日増え続けていましたが、回答されたすべての質問は検索エンジンで発見できません。StackOverflowもありますが、こちらも問題があります。そこで登場したのが、GitHub Discussionsです。"
 
 #. type: delimited block =
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:31
+#, fuzzy
 msgid "If you are interested in the details, the rationale and considerations for GitHub discussions are described in detail in https://github.com/quarkusio/quarkus/pull/19479[this pull-request]."
-msgstr ""
+msgstr "詳細に興味のある方は、GitHubでの議論の根拠や配慮について、 link:https://github.com/quarkusio/quarkus/pull/19479[このプルリクエスト]で詳しく説明しています。"
 
 #. type: Positional ($1) AttributeList argument for macro 'image'
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:33
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Github Discussions for Quarkus Repository"
-msgstr ""
+msgstr "QuarkusリポジトリのGithubディスカッション"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:33
@@ -96,47 +110,54 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:36
+#, fuzzy
 msgid "Hopefully the categories are self-explanatory - intent is to have an initial set of categories as a starting place for discussions. We will add more categories as we get more feedback and see how users post."
-msgstr ""
+msgstr "意図したのは、議論の出発点となる初期のカテゴリーセットを用意することです。ご意見をいただいたり、ユーザーの皆様の投稿を拝見しながら、さらにカテゴリーを増やしていきたいと思います。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:38
+#, fuzzy
 msgid "One special category is https://github.com/quarkusio/quarkus/discussions/categories/quarkus-blog-website[Quarkus Blog/Website] that is used for comments made on the blog."
-msgstr ""
+msgstr "特別なカテゴリーとして、ブログに寄せられたコメントに使用される link:https://github.com/quarkusio/quarkus/discussions/categories/quarkus-blog-website[Quarkus Blog/Website]があります。"
 
 #. type: Title ===
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:39
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Controlling notifications"
-msgstr ""
+msgstr "通知の制御"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:42
+#, fuzzy
 msgid "Floods of notifications is a challenge we already have but with GitHub Discussions we have much better control than almost any other communication platform. To tweak those settings click the \"Watch\" button in the upper right corner on https://github.com/quarkusio/quarkus[quarkusio/quarkus] repository and turn on/off the areas as appropriate for you."
-msgstr ""
+msgstr "しかし、GitHub Discussions を使えば、他のコミュニケーション・プラットフォームよりもはるかにうまくコントロールすることができます。これらの設定を微調整するには、 link:https://github.com/quarkusio/quarkus[quarkusio/quarkus]リポジトリの右上にある \"Watch\" ボタンをクリックして、自分に合った領域をオン/オフします。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:46
+#, fuzzy
 msgid "In addition GitHub discussions supports labelling of discussions the same way as for issues and pull requests. We plan on enabling the QuarkusBot to auto-label discussions in Q&A category to help with additional filtering and targeted notifications."
-msgstr ""
+msgstr "また、GitHubディスカッションでは、課題やプルリクエストと同じようにディスカッションのラベル付けがサポートされています。QuarkusBotがQ&amp;Aカテゴリにディスカッションを自動でラベル付けすることで、フィルタリングやターゲットを絞った通知ができるようになる予定です。"
 
 #. type: Title ==
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:47
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Feedback"
-msgstr ""
+msgstr "フィードバック"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:50
+#, fuzzy
 msgid "GitHub Discussions is a new feature and we are looking forward to see what everyone will do with it. If you have feedback do tell us in https://github.com/quarkusio/quarkus/discussions/categories/community[Community discussions] or even put as comment on this blog."
-msgstr ""
+msgstr "GitHub Discussionsは新しい機能で、私たちは皆さんがこの機能を使って何をするのか楽しみにしています。ご意見・ご感想がありましたら、 link:https://github.com/quarkusio/quarkus/discussions/categories/community[コミュニティ・ディスカッション]やこのブログにコメントをお寄せください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:52
+#, fuzzy
 msgid "Hope you like the refresh and see you in the Discussions!"
-msgstr ""
+msgstr "気に入っていただけたようで、「ディスカッション」でお会いしましょう"
 
 #. type: Plain text
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:54
+#, fuzzy
 msgid "Have fun!"
-msgstr ""
+msgstr "楽しんでください。"
