Update .po files

--- a/l10n/po/ja_JP/_guides/ide-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/ide-tooling.adoc.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-10-06 08:09+0000\n"
+"POT-Creation-Date: 2021-12-02 19:05+0000\n"
 "PO-Revision-Date: 2021-03-15 23:35+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -240,20 +240,23 @@ msgstr "ソース"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:73
-#, no-wrap
-msgid "https://github.com/redhat-developer/vscode-quarkus[Github]"
+#, fuzzy, no-wrap
+#| msgid "https://github.com/redhat-developer/vscode-quarkus[Github]"
+msgid "https://github.com/redhat-developer/vscode-quarkus[GitHub]"
 msgstr "link:https://github.com/redhat-developer/vscode-quarkus[Github]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:74
-#, no-wrap
-msgid "https://github.com/jbosstools/jbosstools-quarkus[Github]"
+#, fuzzy, no-wrap
+#| msgid "https://github.com/jbosstools/jbosstools-quarkus[Github]"
+msgid "https://github.com/jbosstools/jbosstools-quarkus[GitHub]"
 msgstr "link:https://github.com/jbosstools/jbosstools-quarkus[Github]"
 
 #. type: Table
 #: upstream/_guides/ide-tooling.adoc:75
-#, no-wrap
-msgid "https://github.com/redhat-developer/intellij-quarkus[Github]"
+#, fuzzy, no-wrap
+#| msgid "https://github.com/redhat-developer/intellij-quarkus[Github]"
+msgid "https://github.com/redhat-developer/intellij-quarkus[GitHub]"
 msgstr "link:https://github.com/redhat-developer/intellij-quarkus[Github]"
 
 #. type: Table
