--- a/l10n/po/ja_JP/_posts/2020-01-21-march-of-ides.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-01-21-march-of-ides.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-01 13:11+0000\n"
+"POT-Creation-Date: 2021-12-02 19:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -270,19 +270,19 @@ msgstr "ソース"
 #. type: Table
 #: upstream/_posts/2020-01-21-march-of-ides.adoc:79
 #, fuzzy, no-wrap
-msgid "https://github.com/redhat-developer/vscode-quarkus[Github]"
+msgid "https://github.com/redhat-developer/vscode-quarkus[GitHub]"
 msgstr "link:https://github.com/redhat-developer/vscode-quarkus[Github]"
 
 #. type: Table
 #: upstream/_posts/2020-01-21-march-of-ides.adoc:80
 #, fuzzy, no-wrap
-msgid "https://github.com/jbosstools/jbosstools-quarkus[Github]"
+msgid "https://github.com/jbosstools/jbosstools-quarkus[GitHub]"
 msgstr "link:https://github.com/jbosstools/jbosstools-quarkus[Github]"
 
 #. type: Table
 #: upstream/_posts/2020-01-21-march-of-ides.adoc:81
 #, fuzzy, no-wrap
-msgid "https://github.com/redhat-developer/intellij-quarkus[Github]"
+msgid "https://github.com/redhat-developer/intellij-quarkus[GitHub]"
 msgstr "link:https://github.com/redhat-developer/intellij-quarkus[Github]"
 
 #. type: Table
