--- a/l10n/po/ja_JP/_posts/insights_0_transcription.adoc.po
+++ b/l10n/po/ja_JP/_posts/insights_0_transcription.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-02-05 12:05+0900\n"
+"POT-Creation-Date: 2021-12-02 19:04+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -619,7 +619,7 @@ msgstr "ああ......まあ、そういうのもあるよね。暖炉でのここ
 #. type: Plain text
 #: upstream/_posts/insights_0_transcription.adoc:202
 #, fuzzy
-msgid "So, I mean, I guess he means for this? Quarkus Insights? and so... So I don't know if we should have a issue type on Github for a this. But yeah, that's the question. Either Github or Stackoverflow. Yeah, yeah, we have to think about it."
+msgid "So, I mean, I guess he means for this? Quarkus Insights? and so... So I don't know if we should have a issue type on GitHub for a this. But yeah, that's the question. Either GitHub or Stackoverflow. Yeah, yeah, we have to think about it."
 msgstr "ということで、これのことを指しているのかな?Quarkus Insights? とかで、これのためにGithubにissueタイプを用意しておくべきかどうかはわからないんですよね。でも、うん、そこが問題なんだよね。GithubかStackoverflowか。そうそう、考えないといけませんね。"
 
 #. type: Plain text
