--- a/l10n/po/ja_JP/README.md.po
+++ b/l10n/po/ja_JP/README.md.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-31 10:10+0000\n"
+"POT-Creation-Date: 2021-12-02 19:14+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -133,7 +133,7 @@ msgstr ""
 #. type: Title ###
 #: upstream/README.md:37
 #, no-wrap
-msgid "Deploying to Github Pages"
+msgid "Deploying to GitHub Pages"
 msgstr ""
 
 #. type: Plain text
