--- a/l10n/po/ja_JP/_includes/feedback-community-band.html.po
+++ b/l10n/po/ja_JP/_includes/feedback-community-band.html.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-01 21:12+0000\n"
+"POT-Creation-Date: 2021-12-02 19:14+0000\n"
 "PO-Revision-Date: 2021-03-25 23:09+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -29,7 +29,7 @@ msgstr "利用方法については、以下でお問い合わせ頂くことを
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/feedback-community-band.html:7
-msgid "Use the <a href=\"https://github.com/quarkusio/discussions\">Discussions</a> section on our Github project."
+msgid "Use the <a href=\"https://github.com/quarkusio/quarkus/discussions\">Discussions</a> section on our GitHub project."
 msgstr ""
 
 #. type: Content of: <div><div><div><ul><li>
