--- a/l10n/po/ja_JP/_includes/support-help-band.html.po
+++ b/l10n/po/ja_JP/_includes/support-help-band.html.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-12-01 21:12+0000\n"
+"POT-Creation-Date: 2021-12-02 19:14+0000\n"
 "PO-Revision-Date: 2021-03-26 21:11+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -54,7 +54,7 @@ msgstr ""
 
 #. type: Content of: <div><div><img><p>
 #: upstream/_includes/support-help-band.html:18
-msgid "Check out our <a href=\"https://github.com/quarkusio/discussions\">Github Discussions</a> collaboration area to interact with other Quarkus users and developers."
+msgid "Check out our <a href=\"https://github.com/quarkusio/quarkus/discussions\">GitHub Discussions</a> collaboration area to interact with other Quarkus users and developers."
 msgstr ""
 
 #. type: Content of: <div><div><img><h4>
