--- a/l10n/po/ja_JP/_posts/2020-10-05-contributing-for-the-first-time.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-05-contributing-for-the-first-time.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-10-27 20:10+0000\n"
+"POT-Creation-Date: 2021-12-02 19:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -201,7 +201,7 @@ msgstr "何かに取り組んでいる"
 #. type: Plain text
 #: upstream/_posts/2020-10-05-contributing-for-the-first-time.adoc:68
 #, fuzzy
-msgid "When you're decided to work on something, you can find help on Zulip or Github by pinging area link:https://github.com/quarkusio/quarkus/blob/master/MAINTAINERS.adoc[maintainers]."
+msgid "When you're decided to work on something, you can find help on Zulip or GitHub by pinging area link:https://github.com/quarkusio/quarkus/blob/master/MAINTAINERS.adoc[maintainers]."
 msgstr "何かに取り組むことが決まったら、ZulipやGithubで link:https://github.com/quarkusio/quarkus/blob/master/MAINTAINERS.adoc[エリアメンテナ] にpingを打つことでヘルプを見つけることができます。"
 
 #. type: Plain text
