--- a/l10n/po/ja_JP/_posts/2021-12-02-website-and-discussions.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-12-02-website-and-discussions.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-12-02 09:03+0000\n"
+"POT-Creation-Date: 2021-12-02 19:04+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -99,7 +99,7 @@ msgstr "詳細に興味のある方は、GitHubでの議論の根拠や配慮に
 #. type: Positional ($1) AttributeList argument for macro 'image'
 #: upstream/_posts/2021-12-02-website-and-discussions.adoc:33
 #, fuzzy, no-wrap
-msgid "Github Discussions for Quarkus Repository"
+msgid "GitHub Discussions for Quarkus Repository"
 msgstr "QuarkusリポジトリのGithubディスカッション"
 
 #. type: Target for macro image
