--- a/l10n/po/ja_JP/_versions/main/guides/ide-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/ide-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-08-25 02:18+0000\n"
+"POT-Creation-Date: 2021-12-02 19:07+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -239,21 +239,23 @@ msgstr "ソース"
 
 #. type: Table
 #: upstream/_versions/main/guides/ide-tooling.adoc:73
-#, no-wrap
-msgid "https://github.com/redhat-developer/vscode-quarkus[Github]"
-msgstr ""
+#, fuzzy, no-wrap
+#| msgid "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
+msgid "https://github.com/redhat-developer/vscode-quarkus[GitHub]"
+msgstr "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
 
 #. type: Table
 #: upstream/_versions/main/guides/ide-tooling.adoc:74
 #, no-wrap
-msgid "https://github.com/jbosstools/jbosstools-quarkus[Github]"
+msgid "https://github.com/jbosstools/jbosstools-quarkus[GitHub]"
 msgstr ""
 
 #. type: Table
 #: upstream/_versions/main/guides/ide-tooling.adoc:75
-#, no-wrap
-msgid "https://github.com/redhat-developer/intellij-quarkus[Github]"
-msgstr ""
+#, fuzzy, no-wrap
+#| msgid "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
+msgid "https://github.com/redhat-developer/intellij-quarkus[GitHub]"
+msgstr "https://github.com/redhat-developer/quarkus-ls[Quarkus Language Server]"
 
 #. type: Table
 #: upstream/_versions/main/guides/ide-tooling.adoc:76
