--- a/l10n/po/ja_JP/_posts/2021-09-01-using-lra.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-09-01-using-lra.adoc.po
@@ -253,6 +253,10 @@ msgid ""
 "import javax.ws.rs.Produces;\n"
 "import javax.ws.rs.core.MediaType;\n"
 msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
 
 #. type: delimited block -
 #: upstream/_posts/2021-09-01-using-lra.adoc:135
