Add machine translation

--- a/l10n/po/ja_JP/_includes/about.html.po
+++ b/l10n/po/ja_JP/_includes/about.html.po
@@ -63,8 +63,9 @@ msgstr "<a href=\"/developer-joy/\">開発者満足について詳しく知る</
 
 #. type: Content of: <div><div><div><img><h3>
 #: upstream/_includes/about.html:18
+#, fuzzy
 msgid "Kubernetes-native"
-msgstr ""
+msgstr "Kubernetes-native"
 
 #. type: Content of: <div><div><div><img><p>
 #: upstream/_includes/about.html:19
